<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_details_loader"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_details_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/network_error_message"
        android:textSize="30sp"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_details_original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_details_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="12dp"
                android:contentDescription="@string/movie_poster_description" />

            <TextView
                android:id="@+id/tv_details_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/details_release_date"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/tv_details_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/details_rating" />

            <TextView
                android:id="@+id/tv_details_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/details_plot"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/tv_details_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text=""
                android:paddingTop="10dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>